# ChangeLog for games-simulation/crashtest
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-simulation/crashtest/ChangeLog,v 1.8 2010/09/16 17:51:34 scarabeus Exp $

  16 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org> crashtest-1.1.ebuild:
  virtual/glut -> media-libs/glut

  26 Nov 2009; Markus Meier <maekke@gentoo.org> crashtest-1.1.ebuild:
  amd64/x86 stable, bug #294556

*crashtest-1.1 (14 Oct 2009)

  14 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +crashtest-1.1.ebuild, +files/crashtest-1.1-gentoo.patch:
  version bump

  22 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  files/crashtest-1.0-gentoo.patch, crashtest-1.0.ebuild:
  EAPI=2; re-roll patch; work around for bug #237135

  14 Nov 2008; Santiago M. Mola <coldwind@gentoo.org> crashtest-1.0.ebuild:
  Restrict fltk dependency to SLOT 1.1 (bug #246445).

  24 Aug 2007; Tristan Heaven <nyhm@gentoo.org> crashtest-1.0.ebuild:
  HOMEPAGE update, bug #190040

  22 May 2007; Tristan Heaven <nyhm@gentoo.org> crashtest-1.0.ebuild:
  Add ~x86 keyword

*crashtest-1.0 (18 May 2007)

  18 May 2007; Tupone Alfredo <tupone@gentoo.org>
  +files/crashtest-1.0-gentoo.patch, +metadata.xml, +crashtest-1.0.ebuild:
  New package. Bug #153560 by Paul Bredbury
